--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -214,7 +214,7 @@
                                             {% if product.rating > 0 %}
                                             <p class="">
                                                 <i class="fas text-ylw fa-star mr-1"></i>
-                                                {{ product.rating|floatformat:1  }}
+                                                {{ product.rating_ave|floatformat:1  }}
                                             </p>
                                             {% else %}
                                             <small class="text-muted">
