--- a/cart/templates/cart/includes/cart-total.html
+++ b/cart/templates/cart/includes/cart-total.html
@@ -1,7 +1,7 @@
 <div class="container cart-total-container">
     <div class="row mb--1">
         <h6 class="text-left pl-4 col-6 aw">Cart Total:</h6>
-        <p class="text-right pr-4 col-6 " underline">${{ cart_total|floatformat:2 }}</p>
+        <p class="text-right pr-4 col-6 " underline>${{ cart_total|floatformat:2 }}</p>
     </div>
     <div class="row mb--1">
         <h6 class="text-left pl-4 col-6 aw">Discount: <span class="mont_r">@{{ sub_discout }}%</span></h6>
