--- a/cart/templates/cart/includes/checkout-btns.html
+++ b/cart/templates/cart/includes/checkout-btns.html
@@ -2,12 +2,15 @@
     <div class="col-md-6 col-sm-12">
         <a href="{% url 'products:products' %}"
             class="ripple-surface aw p-2 w-100 border-bk btn btn-warning hover-shadow">
-            <img class="mr-2" src="https://img.icons8.com/cotton/32/000000/online-order.png" />Keep Shopping
+            <img class="mr-2" src="https://img.icons8.com/cotton/32/000000/online-order.png" alt="online-order" />Keep
+            Shopping
         </a>
     </div>
 
     <div class="col-md-6 col-sm-12">
         <a href="{% url 'checkout:checkout' %}"
             class="ripple-surface aw p-2 w-100 border-bk btn btn-success hover-shadow">Checkout
-            <img class="ml-2" src="https://img.icons8.com/dusk/32/000000/password-check.png" /> </i> </a> </div>
+            <img class="ml-2" src="https://img.icons8.com/dusk/32/000000/password-check.png" alt="password-check" />
+        </a>
+    </div>
 </div>
