--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -6,9 +6,6 @@
 
 {% block content %}
 
-
-
-
 <div class="container mb-2 ">
     <div class="row">
         <div class="col">
@@ -69,7 +66,7 @@
                     <p class="my-0 aw">${{ sub_total | floatformat:2 }}</p>
                     <p class="my-0 aw">${{ tax | floatformat:2 }}</p>
                     <p class="my-0 aw">${{ delivery | floatformat:2 }}</p>
-                    <p class="my-0 aw">${{ grand_total | floatformat:2 }}</strong></p>
+                    <p class="my-0 aw">${{ grand_total | floatformat:2 }}</p>
                 </div>
             </div>
         </div>
