--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -43,8 +43,7 @@
         </div>
     </div>
 
-    <!-- <div class="row order-wrap">
-        <!-- Order Info -->
+    <!-- Order Info -->
     <div class="row center-block-justify">
         <div class="card-text col-md-6 col-sm-12" style="max-width:400px">
             <div class="order-succes-wrapper bg-wht fixed-shadow p-2 border rounded-15">
@@ -148,10 +147,10 @@
                     </div>
                     <div class="col-12 col-md-8 py-2">
                         <a class="aw btn btn-primary border-bk hover-shadow" href="{{  order.stripe_receipt }}"
-                            target="_blank"><img
-                                src="https://img.icons8.com/clouds/50/000000/folder-bills.png" /></i><span
-                                class="aw">View
-                                Receipt</span>
+                            target="_blank"><img src="https://img.icons8.com/clouds/50/000000/folder-bills.png" /><span
+                                class="aw">
+                                View Receipt
+                            </span>
 
                         </a>
                     </div>
