--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -29,7 +29,7 @@
                     </a>
                     {% else %}
                     <a href="">
-                        <img class="" card-img-top shop-card-top-img img-fluid" src="{{ MEDIA_URL }}no_image.png"
+                        <img class="card-img-top shop-card-top-img img-fluid" src="{{ MEDIA_URL }}no_image.png"
                             alt="{{ product.name }}">
                     </a>
                     {% endif %}
