--- a/profiles/templates/profiles/shipping_details.html
+++ b/profiles/templates/profiles/shipping_details.html
@@ -31,7 +31,8 @@
                             <button type="submit"
                                 class="btn btn-warning text-wht uppercase col-12 aw rounded-10 px-4 py-2">
                                 <span>
-                                    <img src="https://img.icons8.com/fluent/44/000000/available-updates.png" />
+                                    <img src="https://img.icons8.com/fluent/44/000000/available-updates.png"
+                                        alt="available-updates" />
                                 </span> Update
                                 Shipping Details</button>
                         </form>
