--- a/blog/templates/blog/blog_authors.html
+++ b/blog/templates/blog/blog_authors.html
@@ -28,41 +28,41 @@
 
                 {% for blog in user_blog %}
                 <div class="row mt-1 text-wht">
-                    <a class="text-wht" href="{{ blog.get_absolute_url }}" ">
+                    <a class="text-wht" href="{{ blog.get_absolute_url }}">
                         <div class=" col-12"> {{ blog.title }}
-                        <span class=" aw ml-2 float-right {% if blog.category  == 'Dieting' %} text-primary 
+                            <span class=" aw ml-2 float-right {% if blog.category  == 'Dieting' %} text-primary 
                             {% elif blog.category  == 'Recovery' %} text-warning 
                             {% elif blog.category  == 'Endurance' %} text-info
                             {% elif blog.category  == 'Covid-19' %} text-danger 
                             {% elif blog.category  == 'Members' %} text-light 
                             {% else %} text-success {% endif %}"><i class=" pl-2 pr-1 fad fa-tags"></i>
-                            {{ blog.category }}</span></div>
-                </a>
-                <div class="col-12"><small class="text-wht">{{ blog.content|safe|truncatechars:100 }}</small>
+                                {{ blog.category }}</span></div>
+                    </a>
+                    <div class="col-12"><small class="text-wht">{{ blog.content|safe|truncatechars:100 }}</small>
+                    </div>
+                    <div class="col-12"><span class="text-center"><i class="px-2 text-grn fad fa-eye"></i>
+                            {{ blog.get_view_count }}</span>
+                        <span class="text-center"><i class="px-2 text-primary fad fa-thumbs-up"></i>
+                            {{ blog.get_like_count }}</span>
+                        <span class="text-center"><i class=" px-2 text-ylw fad fa-comments-alt"></i>
+                            {{ blog.get_comment_count }}</span>
+
+                        <span class="float-right">Posted: {{ blog.publish_date|timesince }}</span></div>
                 </div>
-                <div class="col-12"><span class="text-center"><i class="px-2 text-grn fad fa-eye"></i>
-                        {{ blog.get_view_count }}</span>
-                    <span class="text-center"><i class="px-2 text-primary fad fa-thumbs-up"></i>
-                        {{ blog.get_like_count }}</span>
-                    <span class="text-center"><i class=" px-2 text-ylw fad fa-comments-alt"></i>
-                        {{ blog.get_comment_count }}</span>
 
-                    <span class="float-right">Posted: {{ blog.publish_date|timesince }}</span></div>
+                {% if screen_size == True %}
+                <hr class="hr-gry">
+                {% endif %}
+                {% empty %}
+                <div class="text-wht text-center"><span class="aw text-wht mr-1">{{ page_user|title }}</span> has
+                    writen any blogs yet</div>
+
+                {% endfor %}
+
+
             </div>
-
-            {% if screen_size == True %}
-            <hr class="hr-gry">
-            {% endif %}
-            {% empty %}
-            <div class="text-wht text-center"><span class="aw text-wht mr-1">{{ page_user|title }}</span> has
-                writen any blogs yet</div>
-
-            {% endfor %}
-
-
         </div>
     </div>
-</div>
 </div>
 
 <!-- {{user_blog}} -->
