--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -96,14 +96,14 @@
             </a>
             {% endfor %}
 
-            <div class="col-12 mx-auto d-flex justify-content-center"">
-                    <form method=" GET" action="{% url 'products:products' %}" class=" form-inline my-2 my-lg-0 pl-2">
-                <input class="ml-3 aw" type="text" name="q" placeholder="Search Shop" aria-label="Search" />
-                <button class="aw btn btn-outline-text-light my-2 my-sm-0" type="submit">
-                    <span class="icon">
-                        <i class="text-wht fas fa-search fa-lg"></i>
-                    </span>
-                </button>
+            <div class="col-12 mx-auto d-flex justify-content-center">
+                <form method=" GET" action="{% url 'products:products' %}" class=" form-inline my-2 my-lg-0 pl-2">
+                    <input class="ml-3 aw" type="text" name="q" placeholder="Search Shop" aria-label="Search" />
+                    <button class="aw btn btn-outline-text-light my-2 my-sm-0" type="submit">
+                        <span class="icon">
+                            <i class="text-wht fas fa-search fa-lg"></i>
+                        </span>
+                    </button>
                 </form>
             </div>
             <!-- Sort By Nav -->
