--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -57,10 +57,10 @@
                     <h4 class="aw text-wht text-center">My Blogs</h4>
                     <div class="profile-overlay">
                         <ul>
-                            {% if blog %}
+
                             {% for blog in user_blog %}
                             <li>
-                                <p class="text-wht text-center">
+                                <div class="text-wht mx-auto">
                                     <a href="{{ blog.get_absolute_url }}">{{ blog.title|title }}</a><br>
                                     <div class="row justify-content-center">
                                         <div class="col-4"><small class="text-wht"><i class="text-grn fad fa-eye"></i>
@@ -76,7 +76,12 @@
                                         </div>
                                     </div>
                                     <div class="row justify-content-center">
-                                        <div class="col-6"><small class="text-wht"><i class="fad fa-tags"></i>
+                                        <div class="col-6"><small class="text-wht {% if blog.category  == 'Dieting' %} text-primary 
+                                            {% elif blog.category  == 'Recovery' %} text-warning 
+                                            {% elif blog.category  == 'Endurance' %} text-info
+                                            {% elif blog.category  == 'Covid-19' %} text-danger 
+                                            {% elif blog.category  == 'Members' %} text-light 
+                                            {% else %} text-success {% endif %}""><i class=" fad fa-tags"></i>
                                                 {{ blog.category }}</small>
                                         </div>
 
@@ -85,10 +90,9 @@
                                         </div>
                                     </div>
 
-                                </p>
+                                </div>
                             </li>
-                            {% endfor %}
-                            {% else %}
+                            {% empty %}
                             <p class="aw text-wht">You hanv't writen any blogs yet</p>
 
                             <p class="text-wht">
@@ -100,7 +104,8 @@
 
                             </p>
 
-                            {% endif %}
+                            {% endfor %}
+
                         </ul>
 
                     </div>
