--- a/programs/templates/programs/program_detail.html
+++ b/programs/templates/programs/program_detail.html
@@ -32,7 +32,7 @@
                     <div class="row">
                         <div class="col-2 center-block">
                             <a href="{{ workout.get_absolute_url }}">
-                                <img src="https://img.icons8.com/fluent/48/000000/circled-play.png" />
+                                <img src="https://img.icons8.com/fluent/48/000000/circled-play.png" alt="circled" />
                             </a>
                         </div>
                         <div class="col-10">
