--- a/blog/templates/blog/includes/blog_right.html
+++ b/blog/templates/blog/includes/blog_right.html
@@ -15,7 +15,12 @@
                     <h5 class="card-title text-center text-wht">{{ blog.title|title }}</h5>
                     <p class="text-center text-wht"> <small class="text-wht">Author: </small>
                         &nbsp;{{ blog.author|title }}</p>
-                    <small class="text-muted"><i class="mx-2 text-wht fad fa-tags"></i>{{ blog.category }}</small>
+                    <small class="{% if blog.category  == 'Dieting' %} text-primary 
+                    {% elif blog.category  == 'Recovery' %} text-warning 
+                    {% elif blog.category  == 'Endurance' %} text-info
+                    {% elif blog.category  == 'Covid-19' %} text-danger 
+                    {% elif blog.category  == 'Members' %} text-light 
+                    {% else %} text-success {% endif %}"><i class="mx-2 fad fa-tags"></i>{{ blog.category }}</small>
                     <small class="card-text text-wht">{{ blog.content|safe|truncatechars:100 }}</small>
                     <span class="text-mute float-right"><small class="text-muted"> Posted:
                             {{ blog.publish_date|timesince }}</small></span>
