--- a/static/css/style.css
+++ b/static/css/style.css
@@ -398,7 +398,7 @@ nav {
   position: relative;
   top: 0px;
   height: 90vh;
-  background: url(/static/images/hipcravo-index-unsplash.jpg) no-repeat center center scroll;
+  background: url(/static/images/3rd_index_small.jpg) no-repeat center top fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -457,7 +457,7 @@ nav {
 
 /* INDEX_PAGE-SECTION-2 */
 #section2 {
-  background-color: #fff;
+  background-color: rgb(255, 255, 255);
   height: fit-content;
 }
 
@@ -1014,10 +1014,25 @@ nav {
   }
 }
 
-/* Media Queries for Standard Devices CSS-TRICKS https://css-tricks.com/
-/* iPhone 5, 5S, 5C and 5SE */
-/* @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
+/* Media Queries for Standard Devices CSS-TRICKS https: //css-tricks.com/ */
+
+/* iPhone 5,5S, 5C and 5SE  */
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
   #section1-pic {
     height: 147vh;
   }
-}  */
+}
+
+/* iPhone 6, 6S, 7 and 8 Landscape */
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
+  #section1-pic {
+    height: 144vh;
+  }
+}
+
+/* iPhone X Landscape */
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {
+  #section1-pic {
+    height: 144vh;
+  }
+}
