fixed a bug in cart views changed colours in sub_cancel.html

--- a/profiles/templates/profiles/cancel_sub_confirm.html
+++ b/profiles/templates/profiles/cancel_sub_confirm.html
@@ -13,11 +13,11 @@
 
                 </h4>
                 <span><a href="{% url 'profiles:profile'  %}"
-                        class="aw text-wht mt-3 w-100 btn btn-success text-bk border border-white">No.
+                        class="aw text-wht mt-3 w-100 btn btn-danger text-bk border border-white">No.
                         Take me
                         back to Dashboard </a></span>
                 <span><a href="{% url 'memberships:cancel' %}"
-                        class="aw text-wht mt-3 w-100 btn btn-danger text-bk border border-white">Yes. Cancel
+                        class="aw text-wht mt-3 w-100 btn btn-success text-bk border border-white">Yes. Cancel
                         My
                         Subscription</a></span>
             </div>
