fixed a bug with the ratings not showing up when changed

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -197,7 +197,7 @@
                             {% endif %}
                             <i class="fas text-ylw fa-lg fa-star mr-1"></i>
 
-                            {% if product.rating > 0 %}
+                            {% if product.rating_ave > 0 %}
                             <small class="">{{ product.rating_ave|floatformat:1 }}/5</small>
                             {% else %}
                             <small class="">No Ratings</small>
