--- a/templates/base_partials/footer.html
+++ b/templates/base_partials/footer.html
@@ -117,7 +117,8 @@
         <div class="col-12 feet-bg">
             <a class="feet-bg" href="https://github.com/Clinton-Davis" target="_blank">
 
-                <h6 class="aw text-center my-3"><img src="https://img.icons8.com/fluent/28/000000/github.png" />Web
+                <h6 class="aw text-center my-3"><img class=""
+                        src="https://img.icons8.com/fluent/28/000000/github.png" />Web
                     Design by Clinton Davis</h6>
             </a>
         </div>
