--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -78,7 +78,8 @@
 
         <div class="card d-block d-sm-none d-md-none">
             <a href="{% url 'blog:list' %}" class="ripple-surface">
-                <img src="{% static 'images/sven-mieke.jpg' %}" class="custom_img card-img-top" alt="Lady in gym" />
+                <img src="{% static 'images/wallpaperflare_blong.jpg' %}" class="custom_img card-img-top"
+                    alt="Lady in gym" />
                 <div class="card-body">
                     {% include "home/includes/community_blog.html" %}
                 </div>
@@ -91,7 +92,8 @@
                 <div class="card-body">
                     {% include "home/includes/community_blog.html" %}
                 </div>
-                <img src="{% static 'images/sven-mieke.jpg' %}" class="custom_img card-img-top" alt="Lady in gym" />
+                <img src="{% static 'images/wallpaperflare_blong.jpg' %}" class="custom_img card-img-top"
+                    alt="Lady in gym" />
             </a>
         </div>
 
