--- a/blog/templates/blog/includes/blog_right.html
+++ b/blog/templates/blog/includes/blog_right.html
@@ -5,7 +5,7 @@
                 {% elif blog.category  == 'Recovery' %} border border-warning 
                 {% elif blog.category  == 'Covid-19' %} border border-danger 
                 {% elif blog.category  == 'Endurance' %} border border-info
-                {% else %} border border-success {% endif %}" style=" max-width: 830px;">
+                {% else %} border border-success {% endif %} max_w_50">
         <div class="row no-gutters rounded">
             <div class="col-md-4 bg-black rounded">
                 <img src="{{ blog.thumbnail.url }}" class="card-img blog-list-img" alt="...">
