--- a/profiles/templates/profiles/profile_subscriptions.html
+++ b/profiles/templates/profiles/profile_subscriptions.html
@@ -9,7 +9,7 @@
     <div class="container profile">
         <div class="row">
             <div class="col-md-12 mb-0">
-                <a class="text-wht aw pl-2" href="{% url 'profiles:profile'  %}">Dashboard</a>
+                <a class="text-wht aw pl-2" href="{% url 'profiles:profile'  %}" title="Back to Dashboard">Dashboard</a>
                 <span class="mx-2 mb-0 text-wht">/</span>
                 <small class="text-wht aw">Subscriptions</small>
             </div>
