--- a/programs/templates/programs/workout_detail.html
+++ b/programs/templates/programs/workout_detail.html
@@ -9,7 +9,7 @@
     <div class="container ">
         <div class="row">
             <div class="col-md-12 mb-0">
-                <a class="text-wht aw pl-2" href="{% url 'programs:list' %}">Programs</a>
+                <a class="text-wht aw pl-2" href="{% url 'programs:list' %}" title="Back to Programs">Programs</a>
                 <span class="mx-2 mb-0 text-wht">/</span>
                 <small class="text-wht aw">{{ object.title }}</small>
             </div>
