--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -8,7 +8,7 @@
     <div class="container ">
         <div class="row">
             <div class="col-md-12 mb-0">
-                <a class="text-wht aw pl-2" href="{% url 'blog:list' %}">Blogs</a>
+                <a class="text-wht aw pl-2" href="{% url 'blog:list' %}" title="Back to Blogs">Blogs</a>
                 <span class="mx-2 mb-0 text-wht">/</span>
                 {% if user.is_authenticated %}
                 <a class="text-wht aw pl-2" href="{% url 'blog:create' %}">Create</a>
