--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -10,7 +10,7 @@
     <div class="container ">
         <div class="row">
             <div class="col-md-12 mb-0">
-                <a class="text-wht aw pl-2" href="{% url 'products:products' %}">Shop</a>
+                <a class="text-wht aw pl-2" href="{% url 'products:products' %}" title="Back to Shop">Shop</a>
                 <span class="mx-2 mb-0 text-wht">/</span>
                 <span class="mx-2 mb-0 text-wht"><small class="aw">Cart</small></span>
 
