--- a/home/templates/home/terms.html
+++ b/home/templates/home/terms.html
@@ -7,7 +7,7 @@
     <div class="container ">
         <div class="row">
             <div class="col-md-12 mb-0">
-                <a class="text-wht aw pl-2" href="{% url 'home' %}">Home</a>
+                <a class="text-wht aw pl-2" href="{% url 'home' %}" title="Back to Home Page">Home</a>
                 <span class="mx-2 mb-0 text-wht">/</span>
                 <small class="text-wht aw">Terms and Conditions</small>
             </div>
