--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -12,7 +12,8 @@
         <div class="container ">
             <div class="row">
                 <div class="col-md-12 mb-0">
-                    <a class="text-wht aw pl-2 font-lrg" href="{% url 'products:products' %}">Back To Shop</a>
+                    <a class="text-wht aw pl-2 font-lrg" href="{% url 'products:products' %}" title="Back to Shop">Back
+                        To Shop</a>
                     <span class="mx-2 mb-0 text-wht">/</span>
                     <small class="text-wht aw">Product</small>
                 </div>
