--- a/templates/base_partials/footer.html
+++ b/templates/base_partials/footer.html
@@ -17,7 +17,7 @@
                         <div class="input-group  mb-2">
                             {{ news_form }}
                             <div class="input-group-prepend">
-                                <button type="submit"
+                                <button type="submit" title="Submit email for newsletters"
                                     class="ripple-surface aw btn btn-outline-light btn-sm">Submit</button>
                             </div>
                         </div>
