deleted old images and added new products images added reuired fix

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -75,8 +75,7 @@
 
         <div class="card d-block d-sm-none d-md-none" title="To Blogs">
             <a href="{% url 'blog:list' %}" class="ripple-surface">
-                <img src="{% static 'images/wallpaperflare_blong.jpg' %}" class="custom_img card-img-top"
-                    alt="Lady in gym" />
+                <img src="{% static 'images/blog_blong.jpg' %}" class="custom_img card-img-top" alt="Lady in gym" />
                 <div class="card-body">
                     {% include "home/includes/community_blog.html" %}
                 </div>
@@ -89,8 +88,7 @@
                 <div class="card-body">
                     {% include "home/includes/community_blog.html" %}
                 </div>
-                <img src="{% static 'images/wallpaperflare_blong.jpg' %}" class="custom_img card-img-top"
-                    alt="Lady in gym" />
+                <img src="{% static 'images/blog_blong.jpg' %}" class="custom_img card-img-top" alt="Lady in gym" />
             </a>
         </div>
 
