--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -1,20 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Audiowide&family=Montserrat:ital,wght@0,600;1,400&display=swap");
 
 #container {
-    background: url(/static/images/evan-wise-blog-bg.jpg) no-repeat center center fixed;
-    height: fit-content;
+    background: url(/static/images/george-pagan.small.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     position: relative;
+    height: fit-content;
+    min-height: 100vh;
     width: 100%;
     min-width: 980px;
     padding: 0;
 }
 
 #header {
-    background-color: rgb(0, 0, 0, 0.5);
+    background-color: rgb(0, 0, 0, 0.8);
     color: rgb(245, 245, 245);
 }
 
@@ -25,7 +26,7 @@ body::before {
     font-family: "audiowide", sans-serif;
     text-transform: uppercase;
     color: rgb(255, 255, 255);
-    background-color: rgba(0, 0, 0, 0.897);
+    background-color: rgba(0, 0, 0, 1);
 }
 
 #branding h1 {
@@ -39,17 +40,18 @@ body::before {
 
 h1 {
     font-family: "Audiowide", sans-serif;
-    color: rgb(251, 252, 250);
+    color: rgb(48, 48, 48);
 }
 
 h2 {
-    color: rgb(251, 252, 250);
+    color: rgb(0, 0, 0);
 }
 
 p,
 ul,
 li {
-    color: rgb(251, 252, 250);
+    color: rgb(0, 0, 0);
+    font-size: medium;
 }
 
 #content-main {
@@ -61,13 +63,13 @@ div.breadcrumbs {
     padding: 10px 40px;
     border: none;
     font-size: 14px;
-    color: #c4dce8;
+    color: rgb(196, 220, 232);
     text-align: left;
 }
 
 a:link,
 a:visited {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     text-decoration: none;
 }
 
@@ -77,15 +79,17 @@ a:visited {
     font-size: 13px;
     text-align: left;
     background: rgba(0, 0, 255, 0.61);
-    color: #fff;
+    color: rgb(255, 255, 255);
 }
+
+
 
 .app-blog {
     background-color: rgb(226, 114, 124);
 }
 
 .app-products {
-    background-color: rgb(106, 192, 150);
+    background-color: rgba(106, 192, 150, 1);
 }
 
 .app-checkout {
